--- a/AuthoringTool/AuthoringTool.csproj
+++ b/AuthoringTool/AuthoringTool.csproj
@@ -52,9 +52,6 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ContentArchiveLibrary">
-      <HintPath>lib\ContentArchiveLibrary.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="FileSystemMetaLibrary">
       <HintPath>lib\FileSystemMetaLibrary.dll</HintPath>
@@ -86,6 +83,12 @@
     <Compile Include="Option.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ContentArchiveLibrary\ContentArchiveLibrary.csproj">
+      <Project>{8477ea81-da37-43f6-a34f-3cb57d4cf7ca}</Project>
+      <Name>ContentArchiveLibrary</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
